--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 authors = ["Felix Milea-Ciobanu <felixmilea@gmail.com>"]
 
 [dependencies]
+hyper = "0.10"
+json = "*"
+regex = "0.2"
 
 [[bin]]
 name = "ger"
-path = "src/ger.rs"
+path = "src/main.rs"
